cmake_minimum_required(VERSION 3.25)
#project(src)

set(CMAKE_CXX_STANDARD 14)

#include_directories(.)
#include_directories(01-LinearList)
#add_executable(src sort.c)
#add_executable(01-LinearList/1_1_LinkList.cpp )
#add_executable(02-StackAndQueue/02-05-Sq2Queue.cpp)
add_executable(01-LinearList/1_1_LinkList.cpp)
