cmake_minimum_required(VERSION 3.25)
project(src)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
#include_directories(01-LinearList)
#add_executable(src sort.c)
#add_executable(01-LinearList/1_1_LinkList.cpp )
#include_directories(02-StackAndQueue)
#add_executable(src/02-StackAndQueue/02-07-BracketMatch.cpp)
#add_executable(01-LinearList/1_1_LinkList.cpp)
add_executable(04-Tree/04-02-ThreadTree.cpp)
